# blog

./: .gitignore  404.html  CHANGELOG.md  CNAME  README.md  REPO_REVIEW.md  about.html  about.rst  archive.html  atom.xml  blog.cabal  colophon.html  colophon.markdown  contact.html  contact.markdown  index.html  robots.txt  rss.xml  site.hs  sitemap.xml
app/: site.hs
bib/: bibliography.bib
css/: base.css  default.css  desktop.css  mobile.css  noprofits-theme.css  print.css
js/: code-copy.js  featured-random.js  mathjax-config.js  noprofits-theme.js  theme-toggle.js
notes/: acs-style.md  blog-authoring.md  hartree-fock-basis-convergence-plan.md
posts/: 2025-01-20-chemical-kinetics.html  2025-01-20-chemical-kinetics.markdown  2025-01-22-discrete-math.html  2025-01-22-discrete-math2.html  2025-01-22-discrete-math3.html  2025-01-22-discrete-math4.html  2025-01-22-discrete-math5.html  2025-01-22-discrete-math6.html  2025-01-22-discrete-math7.html  2025-01-25-radiochemistry.html  2025-02-18-Understanding-Network-Paths.html  2025-02-18-Understanding-Network-Paths.markdown  2025-02-19-Evolving-Network-Diagnostics-for-the-Modern-Security-Landscape.html  2025-02-19-Evolving-Network-Diagnostics-for-the-Modern-Security-Landscape.markdown  2026-01-16-quantum-tunneling-psi4-results.html  2026-01-16-quantum-tunneling-workflow.html  2026-06-14-circuit-diagrams-with-circuitikz.html  2026-06-14-circuit-diagrams-with-circuitikz.md  2026-06-14-rich-tikz-with-dvisvgm.html  2026-06-14-rich-tikz-with-dvisvgm.md  2026-06-15-hardening-the-cors-proxy.html  2026-06-15-reading-the-circuitikz-source.html  2026-06-15-reading-the-circuitikz-source.md  2026-06-16-running-my-day-job-on-claude-code.html  2026-06-17-reading-a-food-banks-990.html  2026-06-17-reading-a-food-banks-990.md  2026-06-18-a-citation-a-slot-and-the-line.html  2026-06-18-the-met-api-has-no-random-button.html  2026-06-18-the-met-api-has-no-random-button.md  2026-06-19-gcloud-firebase-and-google-workspace.html  2026-06-20-what-are-cloud-functions.html  2026-06-22-trusting-an-agent-you-didnt-supervise.md  (+73 more)
test/: Spec.hs
(+69 files in other folders)
